--- a/.github/workflows/code-check.yaml
+++ b/.github/workflows/code-check.yaml
@@ -19,28 +19,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: clippy check
         run: |
-          cargo clippy --all-targets --all-features
+          make check
   code_test:
     runs-on: ubuntu-latest
     needs: code_check
     steps:
       - uses: actions/checkout@v4
-      - name: build
+      - name: install dependencies
         run: |
-          cargo build --release
-      - name: test archive listing
+          sudo apt-get install -y tree
+      - name: functional tests
         run: |
-          mkdir ./tar-test
-          echo "file 1 contents" > ./tar-test/file1.txt
-          echo "file 2 contents" > ./tar-test/file2.txt
-          echo "file 3 contents" > ./tar-test/file3.txt
-          echo "file 4 contents" > ./tar-test/file4.txt
-          cd ./tar-test
-          tar -cf test-archive.tar file1.txt file2.txt file3.txt file4.txt
-          cd ..
-          cat ./tar-test/test-archive.tar | ./target/release/cc-tar-rs -t | tee ./tar-test/result.txt
-          for i in {1..4}; do
-              echo "file${i}.txt" >> ./tar-test/expected.txt
-          done
-          diff ./tar-test/result.txt ./tar-test/expected.txt
-          rm -r ./tar-test
+          make functional-test
