--- a/.github/workflows/code-check.yaml
+++ b/.github/workflows/code-check.yaml
@@ -25,6 +25,8 @@ jobs:
     needs: code_check
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: install dependencies
         run: |
           sudo apt-get install -y tree
